testsuite/tests/parser/should_fail/T20609d.stderr

T20609d.hs:9:3: error: [GHC-58481]
    Parse error on input ‘forall’.
    Expected one of 'as', 'hiding', 'qualified', 'export', 'label',
                    'dynamic', 'safe', 'interruptible', 'unsafe', 'family', ...
